# log_processing

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  test.yml
cfg/: config.cfg
db/: setup.sql
scripts/: create_mwa_job_jobs_history_table.sql  filter.sh
src/: cli.py  handler.py  handlers.py  log_handler.py  main.py  processor.py  repository.py  rules.py
src/db/: create_mwa_jobs_history_table.sql
src/regex_log_parser/: __init__.py  handler.py  processor.py
src/regex_log_parser/handlers/: __init__.py  base.py  postgres.py
tests/: test_log_parser.py  test_schema.sql
